Archive function implemented for drivers

--- a/views/drivers/show.erb
+++ b/views/drivers/show.erb
@@ -5,7 +5,7 @@
 <form class="" action="/drivers/<%=@driver.id%>/edit" method="get">
   <input type="submit" value="EDIT">
 </form>
-<form class="" action="/drivers/<%=@driver.id%>/delete" method="get">
-  <input type="submit" value="DELETE">
+<form class="" action="/drivers/<%=@driver.id%>/archive" method="get">
+  <input type="submit" value="ARCHIVE">
 </form>
 <h4><a href="/drivers">Go Back</a>
