--- a/views/customers/show.erb
+++ b/views/customers/show.erb
@@ -7,7 +7,7 @@
 <form class="" action="/customers/<%=@customer.id%>/edit" method="get">
   <input type="submit" value="EDIT">
 </form>
-<form class="" action="/customers/<%=@customer.id%>/delete" method="get">
-  <input type="submit" value="DELETE">
+<form class="" action="/customers/<%=@customer.id%>/archive" method="get">
+  <input type="submit" value="ARCHIVE">
 </form>
 <h4><a href="/customers">Go Back</a>
