Added archive message to html profiles, customers and drivers. Starting Deliveries. MAJOR MILESTONE

--- a/views/customers/edit.erb
+++ b/views/customers/edit.erb
@@ -14,6 +14,11 @@
   value="<%=@customer.email%>"/>
   <br/>
 
+  <label for="address">Full address:</label>
+  <input id="address" type="text" name="address"
+  value="<%=@customer.address%>"/>
+  <br/>
+
   <label for="phone-number">Phone number: 0</label>
   <input id="phone-number" type="number" name="phone_number"
   value="<%=@customer.phone_number%>"/>
