--- a/views/customers/new.erb
+++ b/views/customers/new.erb
@@ -11,6 +11,10 @@
   <input id="email" type="email" name="email" />
   <br/>
 
+  <label for="address">Full address:</label>
+  <input id="address" type="text" name="address" />
+  <br/>
+
   <label for="phone-number">Phone number: 0</label>
   <input id="phone-number" type="number" name="phone_number" />
   <br/>
