RESTful routes added to Deliveries. MVP OFFICIALY COMPLETED, proceeding to extensions

--- a/views/deliveries/create.erb
+++ b/views/deliveries/create.erb
@@ -14,7 +14,8 @@
     <td>|</td>
     <td><td><%=@delivery.driver.name%></a></td></td>
   </tr>
-  </table>
+</table>
+<p>The voucher number is <%=@delivery.id%>.</p>
 
 
 <h4><a href="/deliveries">Go Back</a>
