--- a/views/customers/show.erb
+++ b/views/customers/show.erb
@@ -1,4 +1,4 @@
-<h1><%=@customer.contact_name%></h1>
+<h1><%=@customer.company_name%></h1>
 <h2>Contact: <%=@customer.contact_name%></h2>
 <h4>Address: <%=@customer.address%></h4>
 <h4>E-mail: <%=@customer.email%></h4>
