Fixed minor issues with the update function; now displays current values

--- a/views/deliveries/edit.erb
+++ b/views/deliveries/edit.erb
@@ -1,4 +1,4 @@
-<form class="" action="/deliveries/<%=@delivery.id%>" method="post">
+<form class="" action="/deliveries/<%=@delivery.id%>/edit" method="post">
 
   <label for="customer-select">Select Customer:</label>
   <select name="customer_id" id="customer-select">
@@ -21,7 +21,7 @@
   </select>
 
   <label for="contents">Contents:</label>
-  <input id="contents" type="text" name="contents" />
+  <input id="contents" type="text" name="contents" value="<%=@delivery.contents%>" />
   <br/>
 
   <input type="submit" value="Confirm changes"/>
