filter by year and month extension implemented. MAJOR MILESTONE

--- a/views/customers/edit.erb
+++ b/views/customers/edit.erb
@@ -20,7 +20,7 @@
   <br/>
 
   <label for="phone-number">Phone number: 0</label>
-  <input id="phone-number" type="number" name="phone_number"
+  <input id="phone-number" type="tel" name="phone_number"
   value="<%=@customer.phone_number%>"/>
   <br/>
 
