--- a/views/customers/new.erb
+++ b/views/customers/new.erb
@@ -16,7 +16,7 @@
   <br/>
 
   <label for="phone-number">Phone number: 0</label>
-  <input id="phone-number" type="number" name="phone_number" />
+  <input id="phone-number" type="tel" min="0" name="phone_number" />
   <br/>
 
   <input type="submit" value="Add customer"/>
