--- a/views/deliveries/index_by_year.erb
+++ b/views/deliveries/index_by_year.erb
@@ -9,6 +9,22 @@
   <%end%>
 </table>
 
+<h2>Filter by month:</h2>
+<table>
+  <th><a href="/deliveries/filter/<%=year%>/1">Jan</a></th>
+  <th><a href="/deliveries/filter/<%=year%>/2">Feb</a></th>
+  <th><a href="/deliveries/filter/<%=year%>/3">Mar</a></th>
+  <th><a href="/deliveries/filter/<%=year%>/4">Apr</a></th>
+  <th><a href="/deliveries/filter/<%=year%>/5">May</a></th>
+  <th><a href="/deliveries/filter/<%=year%>/6">Jun</a></th>
+  <th><a href="/deliveries/filter/<%=year%>/7">Jul</a></th>
+  <th><a href="/deliveries/filter/<%=year%>/8">Aug</a></th>
+  <th><a href="/deliveries/filter/<%=year%>/9">Sep</a></th>
+  <th><a href="/deliveries/filter/<%=year%>/10">Oct</a></th>
+  <th><a href="/deliveries/filter/<%=year%>/11">Nov</a></th>
+  <th><a href="/deliveries/filter/<%=year%>/12">Dec</a></th>
+</table>
+
 <table>
   <%for delivery in @deliveries%>
   <table>
