Archiving confirmation implemented for drivers

--- a/views/drivers/show.erb
+++ b/views/drivers/show.erb
@@ -7,7 +7,7 @@
 <form class="" action="/drivers/<%=@driver.id%>/edit" method="get">
   <input type="submit" value="EDIT">
 </form>
-<form class="" action="/drivers/<%=@driver.id%>/archive" method="get">
+<form class="" action="/drivers/<%=@driver.id%>/confirmation" method="get">
   <input type="submit" value="ARCHIVE">
 </form>
 <h4><a href="/drivers">Go Back</a>
