Archiving confirmation implemented for customers

--- a/views/customers/show.erb
+++ b/views/customers/show.erb
@@ -9,7 +9,7 @@
 <form class="" action="/customers/<%=@customer.id%>/edit" method="get">
   <input type="submit" value="EDIT">
 </form>
-<form class="" action="/customers/<%=@customer.id%>/archive" method="get">
+<form class="" action="/customers/<%=@customer.id%>/confirmation" method="get">
   <input type="submit" value="ARCHIVE">
 </form>
 <h4><a href="/customers">Go Back</a>
