--- a/views/deliveries/index_by_year.erb
+++ b/views/deliveries/index_by_year.erb
@@ -8,7 +8,8 @@
     <th><a href='/deliveries/filter/<%=year%>'><%=year%></th>
   <%end%>
 </table>
-
+<h4><a href="/deliveries">Go Back</a>
+<br/>
 <h2>Filter by month:</h2>
 <table>
   <th><a href="/deliveries/filter/<%=@year%>/1">Jan</a></th>
@@ -24,37 +25,28 @@
   <th><a href="/deliveries/filter/<%=@year%>/11">Nov</a></th>
   <th><a href="/deliveries/filter/<%=@year%>/12">Dec</a></th>
 </table>
-
+<br/>
 <table>
   <%for delivery in @deliveries%>
   <table>
     <tr>
       <th>Content</th>
-      <th></th>
       <th>Customer</th>
-      <th></th>
       <th>Driver</th>
-      <th></th>
       <th>Voucher</th>
-      <th></th>
       <th>Issue Date</th>
     </tr>
     <tr>
       <td><%=delivery.contents%></td>
-      <td>|</td>
       <td><a href="customers/<%=delivery.customer.id%>">
       <%=delivery.customer.company_name%></a></td>
-      <td>|</td>
-      <td><td><a href="drivers/<%=delivery.driver.id%>">
-      <%=delivery.driver.name%></a></td></td>
-      <td>|</td>
+      <td><a href="drivers/<%=delivery.driver.id%>">
+      <%=delivery.driver.name%></a></td>
       <td><%=delivery.id%></td>
-      <td>|</td>
       <td><%=delivery.time%></td>
       <td><form class="" action="/deliveries/<%=delivery.id%>/edit" method="get">
         <input type="submit" value="EDIT">
       </form></td>
-      <td>|</td>
       <td><form class="" action="/deliveries/<%=delivery.id%>/delete" method="get">
         <input type="submit" value="DELETE">
       </form></td>
@@ -63,3 +55,4 @@
     <%end%>
     <a href='/deliveries/new'>Add delivery</a></li>
   </table>
+<h4><a href="/deliveries">Go Back</a>
