--- a/views/deliveries/confirmation.erb
+++ b/views/deliveries/confirmation.erb
@@ -1,5 +1,5 @@
 Are you sure you wish to delete this delivery?
-<td><form class="" action="/deliveries/<%=delivery.id%>/delete" method="get">
+<td><form class="" action="/deliveries/<%=@delivery.id%>/delete" method="get">
   <input type="submit" value="YES">
 </form></td>
 <td><form class="" action="/deliveries" method="get">
