--- a/views/drivers/index.erb
+++ b/views/drivers/index.erb
@@ -1,13 +1,13 @@
+
 <h1>Drivers</h1>
 
-<table>
-  <tr>
-    <th>Name</th>
-  </tr>
+<a href='/drivers/new'><button type"button" class="add_new">
+  Add driver
+</button></a>
+
+<ul class="elements">
   <%for driver in @drivers%>
-  <tr>
-    <td><a href="/drivers/<%=driver.id%>"><%= driver.name %></a></td>
-  </tr>
+  <li><td><a href="/drivers/<%=driver.id%>"><%= driver.name %></a></td></li>
+  <br/>
   <%end%>
-</table>
-<a href='/drivers/new'>Add driver</a></li>
+</ul>
