--- a/views/index.erb
+++ b/views/index.erb
@@ -1,3 +1,5 @@
+<div class='index'>
 <h1>Welcome to Glorry</h1>
 
-<h3>Please make your selection</h3>
+<h3>Please, make your selection above.</h3>
+</div>
