Made a few changes on CSS

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -4,7 +4,7 @@
   <link rel="stylesheet" href="/styles.css">
   <link rel="icon" href="/images/truckie.png" />
   <meta charset="utf-8">
-  <title></title>
+  <title>Glorry</title>
 </head>
 <body>
   <div class="navbar">
