Changed POST methos to GET methos in search bars

--- a/views/customers/index.erb
+++ b/views/customers/index.erb
@@ -4,7 +4,7 @@
   Add customer
 </button></a>
 
-<ul class="elements">
+<ul class="index_lists">
   <%for customer in @customers%>
   <li><td><a href="/customers/<%=customer.id%>"><%= customer.company_name %></a></td></li>
   <br/>
