--- a/views/drivers/index.erb
+++ b/views/drivers/index.erb
@@ -5,7 +5,7 @@
   Add driver
 </button></a>
 
-<ul class="elements">
+<ul class="index_lists">
   <%for driver in @drivers%>
   <li><td><a href="/drivers/<%=driver.id%>"><%= driver.name %></a></td></li>
   <br/>
