--- a/public/styles.css
+++ b/public/styles.css
@@ -10,20 +10,20 @@ body {
 
 table {
   border-collapse: collapse;
-  width: 100%;
   table-layout: fixed;
 }
 
 table, th, td {
   border: 1px solid #F17F42;
   text-align: center;
+  width: 100%;
 }
 
 input[type=submit]{
   font-size: 14px;
   background-color: #CE6D39;
   border: 1px solid #F17F42;
-  padding: 12px 26px;
+  padding: 4px 16px;
   text-decoration: none;
   margin: 4px 2px;
   cursor: pointer;
@@ -68,10 +68,6 @@ input[type=submit]:hover{
   background-color: #DC9570;
 }
 
-.navbar li {
-
-}
-
 .navbar {
   text-align: center;
 }
@@ -81,6 +77,9 @@ input[type=submit]:hover{
   margin-right: 20px;
 }
 
-.elements {
+.index_lists {
   list-style-type: none;
+}
+.button-inline{
+  display: inline-block;
 }
