Started reworking seed file

--- a/views/customers/confirmation.erb
+++ b/views/customers/confirmation.erb
@@ -1,4 +1,4 @@
-Are you sure you wish to archive this customer?
+<p>Are you sure you wish to archive this customer?</p>
 <form class="" action="/customers/<%=@customer.id%>/archive" method="get">
   <input type="submit" value="YES">
 </form>
