--- a/views/deliveries/index_by_year.erb
+++ b/views/deliveries/index_by_year.erb
@@ -32,7 +32,7 @@
 <br/>
 <form method="GET" action="/deliveries/filter/<%=@year%>">
 <div class="search">
-  <p>Search for...</p>
+  <h4>Search in Content...</h4>
    <input id="query" name="query" type="text" placeholder="Search...">
   <button type="submit">
     <i class="fa fa-search">...</i>
