--- a/views/drivers/confirmation.erb
+++ b/views/drivers/confirmation.erb
@@ -1,4 +1,4 @@
-Are you sure you wish to archive this driver?
+<p>Are you sure you wish to archive this driver?</p>
 <form class="" action="/drivers/<%=@driver.id%>/archive" method="get">
   <input type="submit" value="YES">
 </form>
