--- a/views/deliveries/index.erb
+++ b/views/deliveries/index.erb
@@ -15,7 +15,7 @@
 
   <form method="GET" action="/deliveries">
     <div class="search">
-      <p>Search for...</p>
+      <h4>Search in Content...</h4>
       <input id="query" name="query" type="text" placeholder="Search...">
       <button type="submit">
         <i class="fa fa-search">...</i>
