--- a/views/layout.erb
+++ b/views/layout.erb
@@ -11,6 +11,9 @@
     <nav>
       <ul>
         <li>
+          <a href="/"><button type="button">Home</button></a>
+        </li>
+        <li>
           <a href="/deliveries"><button type="button">Deliveries</button></a>
         </li>
         <li>
